--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "module-alias": "^2.2.2",
