--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-cleanarch-typescript",
+  "name": "desafio-bexs",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
