--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^28.1.6",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.6.1",
+    "@types/readline-sync": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "commitizen": "^4.3.0",
@@ -47,6 +48,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "module-alias": "^2.2.2",
+    "readline-sync": "^1.4.10",
     "rimraf": "^3.0.2"
   },
   "config": {
