--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   "rules": {
     "no-use-before-define": "off",
     "no-restricted-syntax": "off",
+    "no-return-await": "off",
     "@typescript-eslint/no-namespace": "off",
     "import/prefer-default-export": "off",
     "max-classes-per-file": "off",
