feat: create find best path in rest interface

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,8 @@
     "prettier"
   ],
   "rules": {
+    "no-constant-condition": "off",
+    "no-await-in-loop": "off",
     "no-use-before-define": "off",
     "no-restricted-syntax": "off",
     "no-return-await": "off",
