--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "celebrate": "^15.0.3",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "module-alias": "^2.2.2",
     "readline-sync": "^1.4.10",
     "rimraf": "^3.0.2"
