--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.6.1",
     "@types/readline-sync": "^1.4.7",
+    "@types/swagger-jsdoc": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "commitizen": "^4.3.0",
@@ -52,7 +54,9 @@
     "express-async-errors": "^3.1.1",
     "module-alias": "^2.2.2",
     "readline-sync": "^1.4.10",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "config": {
     "commitizen": {
